# zabbix

./: .gitattributes  .gitignore  AUTHORS  COPYING  CREDITS  ChangeLog  ChangeLog.legend  FAQ  INSTALL  Makefile.am  Makefile.in  NEWS  NOTES.md  README  README.md  SECURITY.md  TODO  ZBX-26623  acconfig.h  api  bootstrap.sh  build-backend.xml  build-docker-image.xml  build-nightly.xml  build.xml  conf_tests.m4  configure.ac  configure.in  configure~  diff.diff  do  docker-compose.yml  go  nanoseconds-1.8.10.patch  nanoseconds-1.8.11.patch  nanoseconds-1.8.12.patch  nanoseconds-1.8.13.patch  nanoseconds-1.8.14.patch  nanoseconds-1.8.15.patch  nanoseconds-1.8.3.patch  (+14 more)
1.4.j-5466/src/: Makefile.am
RSM-1-170/src/: Makefile.am
ZBX-11188/: Makefile.am
ZBX-11188/include/: version.h
ZBX-11188/m4/: jabber.m4
ZBX-2008/src/: Makefile.am
ZBX-4590/upgrades/: Makefile.am
ZBX-5988/create/: Makefile.am
ZBX-7930-18/src/: Makefile.am
ZBX-8270/: configure.ac
ZBX-9639/upgrades/: Makefile.am
ZBXNEXT-397/database/: Makefile.am
ZBXNEXT-686-testInheritanceDiscoveryRule/man/: Makefile.am
create/schema/: Makefile.am  gen.pl  gen_php.php  generate_schemas.sh  mysql.fmt  oracle.fmt  postgresql.fmt  schema.sql  schema_new.sql
database/mysql/: Makefile.am  double.sql  history_pk_prepare.sql  index_host_and_item_name_upper_field.sql  server.cnf
database/oracle/: Makefile.am  double.sql  history_pk_prepare.sql  images.sql  index_host_and_item_name_upper_field.sql  items_nvarchar_prepare.sql
database/postgresql/: .gitignore  Makefile.am  double.sql  history_pk_prepare.sql  images.sql  index_host_and_item_name_upper_field.sql
db2/: Makefile.am
db2/include/: dbschema.h
dev-449-host_time/: ChangeLog  Makefile.am  configure.in
dev-449-host_time/include/: common.h  db.h  threads.h
dev-449-host_time/m4/: resolv.m4
dev-449-host_time/upgrades/: Makefile.am
dev-486/: configure.in
dev-486/include/: sysinc.h
man/: Makefile.am  Makefile.in  zabbix_agent2.man  zabbix_agentd.man  zabbix_get.man  zabbix_js.man  zabbix_proxy.man  zabbix_sender.man  zabbix_server.man  zabbix_web_service.man
ntp-194/upgrades/: Makefile.am
src/: Makefile.am
src/go/: .gitignore  .golangci.yaml  .golangci.yml  .mockery.yml  Makefile.am  fileheader.txt  go.mod  go.sum
src/libs/: Makefile.am  bincommon.c
src/tests/: Makefile  Makefile.am  data.c  json_parser.pl  main.c  test_escalations.c  test_example.c  unresolved.c  zbxtests.h
src/zabbix_agent/: Makefile.am  Makefile.in  active.c  active.h  alias.c  alias.h  configure.in  cpustat.c  cpustat.h  diskdevices.c  diskdevices.h  eventlog.c  eventlog.h  interfaces.c  interfaces.h  listener.c  listener.h  logfiles.c  logfiles.h  messages.mc  metrics.h  perfstat.c  perfstat.h  procstat.c  procstat.h  resources.rc  stats.c  stats.h  sysinfo.c  sysinfo.h  vmstats.c  vmstats.h  zabbix_agent.c  zabbix_agent.h  zabbix_agentd.c  zbxconf.c  zbxconf.h  zbxkstat.c  zbxkstat.h
src/zabbix_agent_win32/: README  ZabbixW32.dsp  ZabbixW32.dsw  ZabbixW32.sln  ZabbixW32.vcproj  active.cpp  alias.cpp  base64.cpp  collect.cpp  comm.cpp  common.h  config.cpp  eventlog.cpp  execute.cpp  log.cpp  logfiles.cpp  main.cpp  md5.cpp  md5.h  messages.mc  network.cpp  procinfo.cpp  resource.h  service.cpp  sysinfo.cpp  tmp.cpp  util.cpp  xml.cpp  xml_comms.cpp  zabbixw32.h
src/zabbix_alarmer/: Makefile.in  configure.in  zabbix_alarmer.c
src/zabbix_get/: Makefile.am  zabbix_get.c
src/zabbix_java/: MANIFEST.MF  Makefile  Makefile.am  settings.sh  startup.sh
src/zabbix_js/: Makefile.am  zabbix_js.c
src/zabbix_proxy/: Makefile.am  evalfunc.c  events.c  events.h  preprocessing.c  proxy.c  proxy_alerter_protocol.c  proxy_lld.c  scripts.c  servercomms.c  servercomms.h  zlog.c
src/zabbix_rsm/: dec.c  enc.c  gen.c
src/zabbix_sender/: Makefile.am  Makefile.in  configure.in  send_buffer.c  send_buffer.h  zabbix_sender.c
src/zabbix_server/: Makefile.am  Makefile.in  actions.c  actions.h  alerter.c  alerter.h  calculator.c  calculator.h  checks_agent.c  checks_agent.h  checks_internal.c  checks_internal.h  checks_simple.c  checks_simple.h  checks_snmp.c  checks_snmp.h  db_lengths.h  db_lengths_constants.h  escalator.c  evalfunc.c  evalfunc.h  events.c  events.h  expression.c  expression.h  functions.c  functions.h  housekeeper.c  housekeeper.h  operations.c  operations.h  pinger.c  pinger.h  postinit.c  postinit.h  rtc.c  rtc.h  scripts.c  scripts.h  server.c  (+6 more)
src/zabbix_snmphandler/: Makefile.am  zabbix_snmphandler.c
src/zabbix_snmptrapper/: Makefile.in  zabbix_snmptrapper.c
src/zabbix_sucker/: Makefile.in  acconfig.h  alerter.c  alerter.h  calculator.c  calculator.h  checks_agent.c  checks_agent.h  checks_internal.c  checks_internal.h  checks_snmp.c  checks_snmp.h  configure.in  housekeeper.c  housekeeper.h  pinger.c  pinger.h  zabbix_sucker.c
src/zabbix_traper/: Makefile.in  configure.in  (+1 more)
tests/: Makefile  Makefile.am  conf_tests.m4  data.c  db_simulation.c  json_parser.pl  main.c  tests_run.pl  ubsan.supp  unresolved.c  zbxmockassert.c  zbxmockassert.h  zbxmockcomm.c  zbxmockdata.c  zbxmockdata.h  zbxmockdb.c  zbxmockdb.h  zbxmockdir.c  zbxmockdummy.c  zbxmockexit.c  zbxmockfile.c  zbxmockhelper.c  zbxmockhelper.h  zbxmockjson.c  zbxmockjson.h  zbxmocklog.c  zbxmockprimitive.c  zbxmockprimitive.h  zbxmockstat.c  zbxmocktest.c  zbxmocktest.h  zbxmocktime.c  zbxmocktime.h  zbxmockutil.c  zbxmockutil.h  zbxtests.h
ui/: Makefile.am  actionconf.php  api_jsonrpc.php  api_scim.php  applications.php  auditacts.php  browserwarning.php  chart.php  chart2.php  chart3.php  chart4.php  chart5.php  chart6.php  chart7.php  composer.json  conf.import.php  correlation.php  defolt.txt  disc_prototypes.php  discoveryconf.php  filtr.txt  graphs.php  history.php  host_discovery.php  host_discovery_prototypes.php  host_prototypes.php  host_screen.php  hostgroups.php  hostinventories.php  hostinventoriesoverview.php  hosts.php  httpconf.php  httpdetails.php  image.php  imgstore.php  index.php  index_http.php  index_mfa.php  index_sso.php  items.php  (+29 more)
upgrades/: Makefile.am
(+81709 files in other folders)
